k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-common-flapi-deployment
  namespace: prod-common-flapi
  labels:
    app: prod-common-flapi
spec:
  selector:
    matchLabels:
      app: prod-common-flapi
  template:
    metadata:
      labels:
        app: prod-common-flapi
    spec:
      containers:
        - name: prod-common-flapi
          image: corentin35/flapi-cms-common:${TAG_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: '300m'
              memory: '400Mi'
            limits:
              cpu: '600m'
              memory: '800Mi'
      imagePullSecrets:
        - name: regcred
