k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-common-flapi-service
  namespace: prod-common-flapi
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: prod-common-flapi
